--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "underwater-demo-2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lordfreezer.github.io/underwater-demo-2/",
   "dependencies": {
     "@popperjs/core": "2.11.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^3.2.3",
     "immer": "^9.0.12",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
